<resources>
    <string name="app_name">MedicineScheduler</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Top Fragment-->
    <string name="morning">MORNING</string>
    <string name="afternoon">AFTERNOON</string>
    <string name="evening">EVENING</string>
    <string name="night">NIGHT</string>
    <!--DrawerList-->
    <string-array name="drawerList">
        <item>Home</item>
        <item>Medicines</item>
        <item>Inventory</item>
    </string-array>

    <!--Action bar-->
    <string name="action_create">Create</string>

    <!--Drawer Toggle-->
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_closed">Drawer Closed</string>

    <!--New Medicine Activity-->
    <string name="medicine_medicine_name">Name*:</string>
    <string name="medicine_medicine_name_hint">Enter Medicine Name</string>
    <string name="medicine_frequency">Frequency*:</string>

    <string-array name="medicine_frequency_options">
        <item>Daily</item>
        <item>Once in 2 days</item>
        <item>Once in 3 days</item>
        <item>Weekly</item>
        <item>Fortnightly</item>
        <item>Monthly</item>
        <item>Other</item>
    </string-array>

    <string name="medicine_start_date">Start Date*:</string>
    <string name="medicine_duration">Duration*:</string>
    <string name="medicine_always">Always</string>
    <string name="medicine_no_of_days">No. of days</string>

    <string name="medicine_picture">Picture:\n(Optional)</string>
    <string name="medicine_program_name">Program Name:\n(Optional)</string>
    <string name="medicine_program_name_hint">Enter Program Name</string>
    <string name="medicine_directions">Directions\n(Optional)</string>
    <string name="medicine_directions_hint">Usage directions in brief</string>
    <string name="medicine_current_inventory">Inventory:\n(Optional)</string>

    <string name="medicine_essential">This Field is essential!</string>
    <string name="medicine_create">DONE</string>

    <!--display medicine-->
    <string name="pill_directions">Pill Directions:</string>
    <string name="no_medicine">You haven\'t added any medicines yet!</string>
</resources>
